--- a/style.css
+++ b/style.css
@@ -2,17 +2,10 @@ body {
 	font-family: "Helvetica";
 	background: url("google-analytics-photo.jpg");
     background-size: cover;
-    background-position: center;
-    text-align: center;   
+    background-position: center; 
 }
 
-#main {
-	margin: 0 auto;
-	vertical-align: bottom;
-	text-align: left;
-}
-
-#main > div {
+div {
 	width: 250px;
 	background: rgba(255,255,255,0.65);
 	padding: 25px;
@@ -20,6 +13,7 @@ body {
 	display: inline-block;
 	margin: 10px;
 	text-align: left;
+	vertical-align: top;
 	}
 
 h1 {
