--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ section {
 	width: 250px;
 	background: rgba(255,255,255,0.65);
 	padding: 25px;
-	border-radius: 10px;
+	border-radius: 5px;
 	display: inline-block;
 	margin: 10px;
 	text-align: left;
@@ -23,4 +23,4 @@ h1 {
 
 input { width: 50%; }
 
-div { margin: 0 auto; width: auto; }
+div { margin: 0 auto; width: 640px; }
