fixed URL and readme

--- a/style.css
+++ b/style.css
@@ -4531,7 +4531,7 @@ footer {
 
 .container {
   max-width: 420px;
-  margin: 0 auto;
+  margin: 2em auto;
   background: white;
   padding: 1em; }
 
