--- a/style.scss
+++ b/style.scss
@@ -4,10 +4,11 @@
 $bg-color: white;
 $charcoal: #36454f;
 $red: #FE334D;
-$purple: #7A96A4;
+$gray: #7A96A4;
 $blue: #1D6AF1;
-$green-pale: #FFD500;
-$green-lime: #13BC2F;
+$yellow: #FFD500;
+$green: #13BC2F;
+$silver: rgb(240,240,240);
 
 // Base Styles 
 html {
@@ -21,7 +22,8 @@ body {
 }
 
 h1 { 
-	font-size: 2em; 
+	font-size: 2em;
+	text-shadow: 2px 2px $yellow;
 	@include mq(medium) {
 		font-size: 2.5em;
 	}
@@ -30,15 +32,20 @@ h1 {
 	}
 }
 
+header h1 { color: $green; }
+header h1 span { color: $blue; }
+header i { color: $charcoal; }
+
 h2 {
 	font-size: 1.5em;
-	color: $purple;
+	color: $gray;
 	margin-top: 1em;
+	text-shadow: 2px 2px $silver;
 }
-h6 { font-size: 0.5em; }
+h6 { font-size: 0.8em; }
 
 p {
-	margin: 0.5em;
+	margin: 0.5em 0;
 }
 
 main, header, footer {
@@ -49,14 +56,12 @@ a, a:visited, a:active { color: $blue; }
 a:hover { text-decoration: none; }
 
 // Sections
-header h1 { color: $charcoal; }
-header h1 span { color: $blue; }
 
 footer { 
-	background: $green-pale; 
+	background: $silver; 
 	border-radius: 5px;
 	padding: 0.5em;
-	margin: 1em 0;
+	margin: 1em 0.5em;
 }
 
 .container { 
@@ -64,12 +69,13 @@ footer {
 	margin: 2em auto;
 	background: $bg-color;
 	padding: 1em;
+	border-radius: 5px;
 }
 
 #intro { 
-	background: $green-pale;
+	background: $silver;
 	color: black;
-	padding: 0.5em;
+	padding: 0.5em 1em;
 	border-radius: 5px;
 }
 
@@ -87,19 +93,27 @@ footer {
 .fa {
 	padding-right: 0.5em;
 }
+
 // Buttons
-button {
+button { 
 	background: $blue;
 	color: white;
 	border: 0;
-	border-bottom: solid 3px $purple; 
+	border-bottom: solid 3px $gray; 
 	border-radius: 5px;
 	padding: 1em;
-	width: 60%;
+	width: 100%;
 	margin-right: 1em;
 }
 
-button:hover { border-bottom-color: $green-lime; }
+button a {
+	color: white;
+	text-decoration: none;
+}
+
+button:hover { 
+	border-bottom-color: $green; 
+}
 
 // Form Elements
 $form-width: 420px;
@@ -109,30 +123,46 @@ form {
 	margin: 1em auto;
 }
 
-label {
-	width: 40%; 
+label, input[type=text] {
 	display: inline-block;
 	padding: 0.5em;
-	font-size: 0.8em;
+	margin-bottom: 0.5em;
+}
+
+label {
+	width: 40%; 
 	color: white;
-	background: $purple;
-	border-radius: 0 5px 5px 0;
+	background: $gray;
+	border-radius: 5px 0 0 5px;
 }
  
 input[type=text] {
 	border: 0;
-	border-bottom: solid 2px $purple;
-	margin-bottom: 0.5em;
 	width: 60%;
 	color: $charcoal;
 	font-weight: lighter;
+	background: $silver;
+	border-radius: 0 5px 5px 0;
 }
 
 input[type=text]:focus {
-	border-bottom-color: $green-lime;
+	background: $yellow;
 }
 
+div#loading {
+	padding: 0.5em;
+	text-align: center;
+	color: $gray;
+	//border: solid 2px $gray;
+	border-radius: 5px;
+	background: $silver;
+}
+
+#spinner {
+	padding: 0;
+	margin: 0;
+}
 // User Interface
 #btn-authorize, #btn-get-data, #loading, #csv-link {
 	display: none;
-}
+} 
