--- a/style.scss
+++ b/style.scss
@@ -99,7 +99,7 @@ button {
 	background: $blue;
 	color: white;
 	border: 0;
-	border-bottom: solid 3px $gray; 
+	border-bottom: solid 4px $gray; 
 	border-radius: 5px;
 	padding: 1em;
 	width: 100%;
@@ -112,7 +112,7 @@ button a {
 }
 
 button:hover { 
-	border-bottom-color: $green; 
+	border-bottom-color: $yellow; 
 }
 
 // Form Elements
@@ -156,6 +156,12 @@ div#loading {
 	//border: solid 2px $gray;
 	border-radius: 5px;
 	background: $silver;
+	margin-top: 1em;
+}
+
+button#save {
+	margin-top: 1em;
+	background: $green;
 }
 
 #spinner {
