--- a/style.scss
+++ b/style.scss
@@ -25,14 +25,14 @@ h1 {
 	font-size: 2em;
 	text-shadow: 2px 2px $yellow;
 	@include mq(medium) {
-		font-size: 2.5em;
+		font-size: 3em;
 	}
 	@include mq(large) {
-		font-size: 2.5em;
+		font-size: 3em;
 	}
 }
 
-header h1 { color: $green; }
+header h1 { color: $green; text-align: center; }
 header h1 span { color: $blue; }
 header i { color: $charcoal; }
 
@@ -43,6 +43,8 @@ h2 {
 	text-shadow: 2px 2px $silver;
 }
 h6 { font-size: 0.8em; }
+
+.centered { text-align: center; }
 
 p {
 	margin: 0.5em 0;
@@ -56,6 +58,13 @@ a, a:visited, a:active { color: $blue; }
 a:hover { text-decoration: none; }
 
 // Sections
+header {
+	margin: 0 auto;
+	margin-top: 2em;
+	background: rgba(255,255,255,0.7);
+	max-width: 420px;
+	border-radius: 5px 5px 0 0;
+}
 
 footer { 
 	background: $silver; 
@@ -66,17 +75,17 @@ footer {
 
 .container { 
 	max-width: 420px; 
-	margin: 2em auto;
+	margin: 0 auto;
 	background: $bg-color;
 	padding: 1em;
-	border-radius: 5px;
+	//border-radius: 0 0 5px 5px;
 }
 
 #intro { 
-	background: $silver;
-	color: black;
-	padding: 0.5em 1em;
-	border-radius: 5px;
+	//background: $silver;
+	//color: black;
+	//padding: 0.5em 1em;
+	//border-radius: 5px;
 }
 
 #spinner {
@@ -92,6 +101,16 @@ footer {
 
 .fa {
 	padding-right: 0.5em;
+}
+
+.photo-credit {
+	max-width: 420px;
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 2em;
+	background: rgba(255,255,255,0.6);
+	padding: 0.5em;
+	border-radius: 0 0 5px 5px;
 }
 
 // Buttons
