--- a/style.css
+++ b/style.css
@@ -4540,7 +4540,7 @@ header {
   border-radius: 5px 5px 0 0; }
 
 footer {
-  background: #f0f0f0;
+  background: #FFD500;
   border-radius: 5px;
   padding: 0.5em;
   margin: 1em 0.5em; }
