--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,7 @@ header {
 }
 
 footer { 
-	background: $silver; 
+	background: $yellow; 
 	border-radius: 5px;
 	padding: 0.5em;
 	margin: 1em 0.5em;
